# ai-employee-gold-tier

./: .gitignore  ARCHITECTURE.md  CLOUD_DEPLOYMENT.md  DEMO_GUIDE.md  DEMO_SCRIPT.md  EXAMPLE_LINKEDIN_DRAFT.md  EXAMPLE_LINKEDIN_OUTPUT.md  GMAIL_AUTH_CHECKLIST.md  GMAIL_MCP_SERVER_SETUP.md  GOLD_TIER_COMPLETE.md  GOLD_TIER_HYBRID_COMPLETE.md  LINKEDIN_DRAFTING_SETUP.md  LINKEDIN_WATCHER_SETUP.md  POLISH_COMPLETE.md  QUICK_START.md  RALPH_WIGGUM_SETUP.md  README.md  REASONING_LOOP_SETUP.md  SECURITY.md  SILVER_TIER_COMPLETE.md  TEST_REASONING_LOOP.md  approval_system.py  authenticate.py  base_skill.py  base_watcher.py  complete_auth.py  complete_oauth.py  exchange_code.py  file_watcher.py  frontend_app.py  get_auth_url.py  gmail_auth.py  gmail_auth_desktop.py  gmail_mcp_auth.py  gmail_mcp_server.py  gmail_watcher.py  linkedin_drafting_agent.py  linkedin_watcher.py  odoo_mcp_server.py  planning_system.py  (+16 more)
demo_vault/: .gitignore  Company_Handbook.md  Dashboard.md
demo_vault/Done/: FILE_20260112_153042_success_test.txt.md  FILE_20260112_162800_skill_test_demo.txt.md  FILE_20260112_172047_test_file_20260112_172045.txt.md  FILE_20260112_173505_manual_test.txt.md  PLAN_LIVE_DEMO.md  PLAN_TEST_QUICKBOOKS.md  PLAN_TEST_RALPH_WIGGUM.md
demo_vault/Drop_Folder/: demo.txt  manual_test.txt  skill_test_demo.txt  success_test.txt  test_file_20260112_172045.txt
demo_vault/Logs/: briefing_20260112.txt  gmail_processed.txt  ralph_wiggum_execution.jsonl  skills_execution.jsonl
demo_vault/Needs_Action/: EMAIL_20260113_173210_Login.md  (+9 more)
skills/: drafting_skill.py  reasoning_skill.py
(+10 files in other folders)
