[project]
name = "watchers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.187.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.3",
    "watchdog>=6.0.0",
    "streamlit>=1.40.0",
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
]
